--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 @import '~antd/dist/antd.css';
 @import '~ag-grid-community/dist/styles/ag-grid.css';
 @import '~ag-grid-community/dist/styles/ag-theme-balham.css';
+@import "~@blueprintjs/core/lib/css/blueprint.css";
+@import "~@blueprintjs/icons/lib/css/blueprint-icons.css";
 
 .App {
  /* height : 100px; */
